--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <header class="text-foreground p-16 pb-0 z-0 relative">
         <nav class="flex w-full justify-between items-center">
           <div class="flex items-center gap-4">
-            <img src="../assets/images/logo.svg" alt="" class="w-12" />
+            <img src="./assets/images/logo.svg" alt="" class="w-12" />
             <span>YO TA.</span>
           </div>
           <div class="flex gap-12">
@@ -46,11 +46,11 @@
           class="mt-16 grid grid-cols-9 gap-6 header-content sticky top-0 left-0"
         >
           <div class="col-span-4">
-            <h1 class="font-semibold text-7xl">
+            <h1 class="font-semibold text-7xl font-sans">
               <img
-                src="../assets/images/my-name.svg"
+                src="./assets/images/my-name.svg"
                 alt="YOHANNES TAKATA"
-                class="w-full"
+                class="w-full font-sans"
                 draggable="false"
               />
             </h1>
@@ -112,27 +112,27 @@
           >
             <div class="flex gap-6">
               <img
-                src="../assets/icons/star.svg"
+                src="./assets/icons/star.svg"
                 alt=""
                 class="text-foreground"
               />
               <img
-                src="../assets/icons/star.svg"
+                src="./assets/icons/star.svg"
                 alt=""
                 class="text-foreground"
               />
               <img
-                src="../assets/icons/star.svg"
+                src="./assets/icons/star.svg"
                 alt=""
                 class="text-foreground"
               />
               <img
-                src="../assets/icons/star.svg"
+                src="./assets/icons/star.svg"
                 alt=""
                 class="text-foreground"
               />
               <img
-                src="../assets/icons/star.svg"
+                src="./assets/icons/star.svg"
                 alt=""
                 class="text-foreground"
               />
@@ -255,7 +255,7 @@
                   id="work-visualize"
                 >
                   <img
-                    src="../assets/images/visualize-video.gif"
+                    src="./assets/images/visualize-video.gif"
                     alt=""
                     class="h-full pointer-events-none rounded-lg"
                   />
