--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
           id="services"
         >
           <div class="pb-16 space-y-6">
-            <h2 class="text-7xl uppercase font-semibold flex-1">
+            <h2 class="text-7xl uppercase font-semibold flex-1 font-header">
               What I Do :)
             </h2>
             <div class="flex gap-6">
@@ -170,7 +170,9 @@
             <div class="py-12">
               <div class="flex gap-6 items-start">
                 <div class="flex-1">
-                  <h2 class="text-5xl uppercase font-semibold flex-1">
+                  <h2
+                    class="text-5xl uppercase font-semibold flex-1 font-header"
+                  >
                     <> Web Development
                   </h2>
                   <p class="mt-6">
@@ -193,7 +195,9 @@
             <div class="py-12">
               <div class="flex gap-6 items-start">
                 <div class="flex-1">
-                  <h2 class="text-5xl uppercase font-semibold flex-1">
+                  <h2
+                    class="text-5xl uppercase font-semibold flex-1 font-header"
+                  >
                     ^ Web Design
                   </h2>
                   <p class="mt-6">
@@ -214,7 +218,9 @@
             <div class="py-12">
               <div class="flex gap-6 items-start">
                 <div class="flex-1">
-                  <h2 class="text-5xl uppercase font-semibold flex-1">
+                  <h2
+                    class="text-5xl uppercase font-semibold flex-1 font-header"
+                  >
                     [ ] Desktop and Mobile App Development
                   </h2>
                   <p class="mt-6">
@@ -237,7 +243,9 @@
           class="w-full bg-foreground bg-fixed texture-50 px-16"
           id="works"
         >
-          <h2 class="text-7xl uppercase font-semibold flex-1 animate-header">
+          <h2
+            class="text-7xl uppercase font-semibold flex-1 animate-header font-header"
+          >
             <span>S</span><span>E</span><span>L</span><span>E</span
             ><span>C</span><span>T</span><span>E</span><span>D</span
             ><span>&nbsp;</span><span>W</span><span>O</span><span>R</span
