--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,20 @@
     class="selection:bg-green-800 selection:text-green-50 bg-black overflow-x-hidden"
   >
     <div
-      class="bg-background text-primary text-xl texture bg-fixed sticky top-6"
+      class="bg-foreground text-primary text-background text-xl texture-50 bg-fixed sticky top-6"
     >
-      <header class="text-foreground p-16 pb-0 z-0 relative">
+      <header class="text-background p-16 pb-0 z-0 relative">
         <nav class="flex w-full justify-between items-center">
           <div class="flex items-center gap-4">
             <img src="./assets/images/logo.svg" alt="" class="w-12" />
             <span>YO TA.</span>
           </div>
           <div class="flex gap-12">
-            <div class="flex items-center gap-2 opacity-50">
+            <div class="flex items-center gap-2">
               <div
-                class="w-4 h-4 rounded-full bg-green-500 animate-pulse"
+                class="w-4 h-4 rounded-full bg-background animate-pulse"
               ></div>
+
               Available for work <span>June 2024</span>
             </div>
             <ul class="flex gap-4">
@@ -55,29 +56,29 @@
               />
             </h1>
             <div
-              class="bg-foreground px-6 py-1 leading-none rounded-full text-background font-semibold mt-12 w-full overflow-x-hidden flex relative marquee-parent"
+              class="bg-background px-6 py-1 leading-none rounded-full text-foreground font-semibold mt-12 w-full overflow-x-hidden flex relative marquee-parent"
             >
               <div
                 class="flex items-center justify-between gap-4 whitespace-pre marquee pl-4"
               >
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span class="flex-1">Web Developer</span>
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span>UI/UX Designer</span>
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span>Desktop App Creator</span>
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span>Mobile App Creator</span>
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span>Network Admin</span>
               </div>
@@ -85,31 +86,29 @@
                 class="flex items-center justify-between gap-4 whitespace-pre marquee pl-4"
               >
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span class="flex-1">Web Developer</span>
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span>UI/UX Designer</span>
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span>Desktop App Creator</span>
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span>Mobile App Creator</span>
                 <div
-                  class="aspect-square border-background w-4 rounded-full border-2"
+                  class="aspect-square border-foreground w-4 rounded-full border-2"
                 ></div>
                 <span>Network Admin</span>
               </div>
             </div>
           </div>
-          <div
-            class="col-span-4 col-start-6 flex flex-col items-start text-foreground"
-          >
+          <div class="col-span-4 col-start-6 flex flex-col items-start">
             <div class="flex gap-6">
               <img
                 src="./assets/icons/star.svg"
@@ -147,7 +146,7 @@
       </header>
       <main class="mt-16 z-10 relative">
         <section
-          class="bg-foreground text-background rounded-3xl rounded-b-none p-16 texture-50"
+          class="bg-background text-foreground rounded-3xl rounded-b-none p-16 texture"
           id="services"
         >
           <div class="pb-16 space-y-6">
@@ -165,8 +164,8 @@
             </div>
           </div>
 
-          <div class="sticky top-32 bg-foreground texture-50 bg-fixed">
-            <hr class="border border-background" />
+          <div class="sticky top-32 bg-background texture bg-fixed">
+            <hr class="border border-foreground/20" />
             <div class="py-12">
               <div class="flex gap-6 items-start">
                 <div class="flex-1">
@@ -182,16 +181,16 @@
                 </div>
                 <ul class="text-3xl font-semibold flex flex-1 flex-col gap-4">
                   <li>Motion and Animations</li>
-                  <hr class="border border-background" />
+                  <hr class="border border-foreground/20" />
                   <li>3D Development</li>
-                  <hr class="border border-background" />
+                  <hr class="border border-foreground/20" />
                   <li>API Development/ Integration</li>
                 </ul>
               </div>
             </div>
           </div>
-          <div class="sticky top-32 bg-foreground texture-50 bg-fixed">
-            <hr class="border border-background" />
+          <div class="sticky top-32 bg-background texture bg-fixed">
+            <hr class="border border-foreground/20" />
             <div class="py-12">
               <div class="flex gap-6 items-start">
                 <div class="flex-1">
@@ -207,14 +206,14 @@
                 </div>
                 <ul class="text-3xl font-semibold flex flex-1 flex-col gap-4">
                   <li>Responsive Design</li>
-                  <hr class="border border-background" />
+                  <hr class="border border-foreground/20" />
                   <li>Wireframing</li>
                 </ul>
               </div>
             </div>
           </div>
-          <div class="sticky top-32 bg-foreground texture-50 bg-fixed">
-            <hr class="border border-background" />
+          <div class="sticky top-32 bg-background texture bg-fixed">
+            <hr class="border border-foreground/20" />
             <div class="py-12">
               <div class="flex gap-6 items-start">
                 <div class="flex-1">
@@ -230,9 +229,9 @@
                 </div>
                 <ul class="text-3xl font-semibold flex flex-1 flex-col gap-4">
                   <li>Cross-platform Development</li>
-                  <hr class="border border-background" />
+                  <hr class="border border-foreground/20" />
                   <li>APIs and Integration</li>
-                  <hr class="border border-background" />
+                  <hr class="border border-foreground/20" />
                   <li>Database Design</li>
                 </ul>
               </div>
@@ -240,7 +239,7 @@
           </div>
         </section>
         <section
-          class="w-full bg-foreground bg-fixed texture-50 px-16"
+          class="w-full bg-background bg-fixed texture text-foreground px-16"
           id="works"
         >
           <h2
@@ -256,6 +255,7 @@
             <div class="flex gap-4 flex-nowrap works">
               <a
                 href="https://visualize-qakf.onrender.com"
+                target="_blank"
                 class="block aspect-[3/2] h-screen py-6"
               >
                 <div
