fix about me breaking

--- a/src/index.html
+++ b/src/index.html
@@ -291,11 +291,10 @@
               class="text-7xl text-foreground uppercase font-semibold flex-1 animate-header font-header col-span-5"
             >
               <span>A</span> <span>L</span><span>i</span><span>t</span
-              ><span>t</span><span>l</span><span>e</span><span>&nbsp;</span
-              ><span>b</span><span>i</span><span>t</span><span>&nbsp;</span
-              ><span>a</span><span>b</span><span>o</span><span>u</span
-              ><span>t</span><span>&nbsp;</span><span>m</span><span>e</span
-              ><span>&nbsp;</span><span>;)</span>
+              ><span>t</span><span>l</span><span>e</span> <span>b</span
+              ><span>i</span><span>t</span><br /><span>a</span><span>b</span
+              ><span>o</span><span>u</span><span>t</span> <span>m</span
+              ><span>e</span><span>&nbsp;</span><span>;)</span>
             </h2>
             <div class="row-start-2 col-start-4 col-span-3 -mt-12">
               <img
