fix footer unclickable links

--- a/src/index.html
+++ b/src/index.html
@@ -399,7 +399,7 @@
             id="contact"
           >
             <div
-              class="circle absolute h-full aspect-square rounded-full bg-red-900 -translate-x-1/2 opacity-5 top-0 left-1/2 scale-50"
+              class="circle absolute h-full aspect-square rounded-full pointer-events-none bg-red-900 -translate-x-1/2 opacity-5 top-0 left-1/2 scale-50"
             ></div>
             <div class="overflow-hidden" id="contact-header-wrapper">
               <img
