amedie video added

--- a/src/index.html
+++ b/src/index.html
@@ -276,12 +276,18 @@
                 </a>
                 <div class="aspect-[3/2] h-screen py-6">
                   <div
-                    class="h-full w-full bg-cover rounded-lg"
+                    class="h-full w-full bg-cover rounded-lg p-16"
                     id="work-amedie"
                     data-description="Desktop application aiding in a faster work environment and customer satisfaction."
                     data-title="Hospital Management System"
                     data-subtitle="Amedie Higher Clinic"
-                  ></div>
+                  >
+                    <img
+                      src="./assets/images/amedie-video.gif"
+                      alt=""
+                      class="h-full pointer-events-none rounded-lg"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
