change abduls title

--- a/src/index.html
+++ b/src/index.html
@@ -388,7 +388,7 @@
                     </div>
                     <div class="flex flex-col">
                       <span>Abdulkerim Getnet</span>
-                      <span class="text-base opacity-70">Abdul Studios</span>
+                      <span class="text-base opacity-70">Architect</span>
                     </div>
                   </div>
                 </div>
