add red to nav links

--- a/src/index.html
+++ b/src/index.html
@@ -31,16 +31,16 @@
               </div>
               <ul class="flex gap-4">
                 <li class="hover:-translate-y-1 duration-100 hover:text-black">
-                  <a href="#">Services</a>
+                  <a href="#services">Services</a>
                 </li>
                 <li class="hover:-translate-y-1 duration-100 hover:text-black">
-                  <a href="#">Works</a>
+                  <a href="#works">Works</a>
                 </li>
                 <li class="hover:-translate-y-1 duration-100 hover:text-black">
-                  <a href="#">About</a>
+                  <a href="#about">About</a>
                 </li>
                 <li class="hover:-translate-y-1 duration-100 hover:text-black">
-                  <a href="#">Contact</a>
+                  <a href="#contact">Contact</a>
                 </li>
               </ul>
             </div>
