--- a/src/index.html
+++ b/src/index.html
@@ -407,13 +407,35 @@
             <div
               class="circle absolute h-full aspect-square rounded-full pointer-events-none bg-red-900 -translate-x-1/2 opacity-5 top-0 left-1/2 scale-50"
             ></div>
-            <div class="overflow-hidden" id="contact-header-wrapper">
-              <img
-                src="./assets/images/get-in-touch.svg"
-                alt="GET IN TOUCH"
-                class="translate-y-full scale-75 opacity-0"
-                id="contact-header"
-              />
+            <div
+              class="overflow-hidden"
+              id="contact-header-wrapper"
+              class="flex items-center"
+            >
+              <div class="flex items-center">
+                <div
+                  class="w-0 rounded-3xl h-28 border-r-4 border-background"
+                ></div>
+                <div
+                  class="flex items-center gap-6 translate-x-1/2 opacity-0 flex-1"
+                  id="contact-header"
+                >
+                  <div>
+                    <img
+                      src="./assets/icons/pointer-hand.svg"
+                      alt=""
+                      class="h-24 w-24"
+                    />
+                  </div>
+                  <div class="flex-1">
+                    <img
+                      src="./assets/images/get-in-touch.svg"
+                      alt="GET IN TOUCH"
+                      class=""
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="mt-6 grid grid-cols-9 gap-6">
               <div class="col-span-4">
